[project]
name = "workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.52.1",
    "fastmcp==2.3.0",
    "ipython>=9.2.0",
    "mcp>=1.9.2",
    "numpy>=2.2.6",
    "openai==1.66.3",
    "streamlit>=1.45.1",
    "tavily-python>=0.7.3",
]
